@@ -21,7 +21,7 @@ USE_MYSQL=	client
 USE_GITHUB=	yes
 GH_ACCOUNT=	Begun
 GH_COMMIT=	64d548b
-GH_TAGNAME=	master
+GH_TAGNAME=	${GH_COMMIT}
 PORTEXAMPLES=	*
 
 OPTIONS_DEFINE=	STATIC TEST EXAMPLES
